Introduce `ktlint` for turms-client-kotlin to verify formatting in CI